Making correct coordinates for the new version of iBus.

Turns out the new version of iBus (starting from 1.5.17) will multiply the coordinates with the scale factor specified by GDK_SCALE.
Chrome on linux now send the system based coordinates to the system's gtk-base IME, despite the scale factor specified by the app.
The correct coordinates should be divided by the GDK_SCALE of the app window.

Bug: 774974
Change-Id: I654bacaa1a4eaba13680a33f2516e41b35d31a13
Reviewed-on: https://chromium-review.googlesource.com/1186291
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Shu Chen <shuchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#585683}
Former-commit-id: 5a19eb524012d2eb81339eeac2b4e5fe2bf45c2b